fix(center): collapse 텍스트 간격 조정

--- a/client/app/center/center.css
+++ b/client/app/center/center.css
@@ -260,7 +260,7 @@ article {
   margin-top: 13px;
 }
 .msg-item.text-child {
-  margin-top: -15px;
+  margin-top: -8px;
 }
 
 .msg-item.file-upload {
